# FEMpy_3D

./: LICENSE  README.md  pyproject.toml
Examples/: Example_CST_Mesh.py  Example_Cube_Mesh.py  Example_Demonstrator.py  Example_Element_CST_Simple.py  Example_Load_LS-DYNA_Mesh.py  Example_Trusses.py  Verify_Element_CST.py  Verify_Element_Hexahedral.py  Verify_Element_Hexahedral_SRI.py  Verify_Element_Truss.py
LS-DYNA_meshs/: Zugprobe_ISO_527_2_Type_B_4mm.k
src/: Element_CST.py  Element_Hexahedral.py  Force.py  Node.py  Structure.py
src/FEMpy_3D/: Constraint.py  Element_CST.py  Element_Hexahedral_SRI.py  Element_Truss.py  Node.py  Structure.py  Viewer.py
testing/: test_Element_CST.py  test_Element_Hexahedral.py  test_Element_Hexahedral_SRI.py  test_Element_Truss.py
