[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'FEMpy_3D'
version = '0.0.1'
description = 'FEM in Python'
authors = [
    {name = 'Maximilian Brodt', email = 'maxbrodt@web.de'},
]
requires-python = '>=3.8'
keywords = ['FEM', '3D', 'Mesh', 'Solver']
license = {text = 'MIT'}
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'numpy>=1.21.0',
	'pyVista>=0.44.0'
]

[project.urls]
"Source Code" = 'https://github.com/MaxBro23/FEMpy_3D'




